Team Avengers/src/objects/PTO_Request__c.object
<CustomObject>
    <fields>
        <fullName>Approval_status__c</fullName>
        <label>Approval status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>FInal rejection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_PTO_End_Date__c</fullName>
        <label>Last PTO End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTO_End_Date__c</fullName>
        <label>PTO End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTO_start_date__c</fullName>
        <label>PTO start date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_duration__c</fullName>
        <formula>(PTO_End_Date__c  -  PTO_start_date__c)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PTO Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>avengers deloitte</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PTO Reason</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PTO Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PTO_end_date</fullName>
        <active>true</active>
        <errorConditionFormula>PTO_End_Date__c  &lt;=  TODAY()</errorConditionFormula>
        <errorDisplayField>PTO_End_Date__c</errorDisplayField>
        <errorMessage>Enter valid PTO end date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PTO_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>PTO_start_date__c  &lt;=  TODAY()</errorConditionFormula>
        <errorDisplayField>PTO_start_date__c</errorDisplayField>
        <errorMessage>Enter valid PTO start date</errorMessage>
    </validationRules>
</CustomObject>